--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+*.swp
+
 # dependencies
 /node_modules
+package-lock.json
 /.pnp
 .pnp.js
 
