--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^6.2.0",
     "firebase": "^4.8.2",
     "prop-types": "^15.5.7",
     "react": "^16.6.3",
